adding all files

--- a/index.html
+++ b/index.html
@@ -1,1 +1,223 @@
-Hello World from githubpages and custom domain
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
+    <link rel="apple-touch-icon" href="http://www.alexguitz.com/img/logo20172.png">
+      <!-- Social tags  -->
+	<meta property="og:title" content="Web Developer">
+	<meta property="og:type" content="website">
+	<meta property="og:site_name" content="AlexGuitz">
+	<meta property="og:description" content="Web developer, technology enthusiast and hobby photographer">
+	<meta property="og:image" content="http://www.alexguitz.com/img/social2017.jpg">
+	<meta property="og:url" content="http://www.alexguitz.com/">
+	<meta property="fb:app_id" content="1053184488043872">
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:site" content="@alexguitz">
+	<meta name="twitter:creator" content="@alexguitz">
+	<meta name="twitter:title" content="Web Developer">
+	<meta name="twitter:description" content="Web developer, technology enthusiast and hobby photographer">
+	<meta name="twitter:image" content="http://www.alexguitz.com/img/social2017.jpg">
+	<meta name="twitter:url" content="https://twitter.com/alexguitz">
+      <!-- others  -->
+    <meta name="theme-color" content="#ff5722">
+    <link rel="icon" sizes="192x192" href="http://www.alexguitz.com/img/logo20172.png">
+    <link rel="icon" type="image/png" href="http://www.alexguitz.com/img/logo20172.png">
+    <title>AlexGuitz | Web Developer </title>
+
+    <!-- Google analytics  -->
+     <!-- <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-60251827-1', 'auto');
+          ga('send', 'pageview');
+    </script> -->
+
+  <!-- CSS  -->
+    <link href="css/materialize.css" type="text/css" rel="stylesheet">
+    <link href="css/style.css" type="text/css" rel="stylesheet" >
+    <script src="js/modernizr.js"></script>
+</head>
+<body id="top" class="scrollspy">
+    <div id="loader-wrapper">
+        <div id="loader"></div>
+        <div class="loader-section section-left"></div>
+        <div class="loader-section section-right"></div>
+    </div>
+
+    <div class="navbar-fixed">
+        <nav id="nav_f" class="white">
+          <div class="container">
+            <div class="nav-wrapper">
+              <ul id="nav-mobile" class="right side-nav">
+                <li><a href="#top">Home</a></li>
+                <li><a href="#intro">About</a></li>
+                <li><a href="#work">Work</a></li>
+                <li><a href="https://www.facebook.com/alexguitz">News</a></li>
+                <li><a href="#" class="dropdown-button" data-activates="languages">Profiles</a></li>
+              </ul>
+              <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
+                 <ul id="languages" class="dropdown-content">
+                   <li><a href="https://www.facebook.com/alexguitz">Facebook</a></li>
+                   <li class="divider"></li>
+                   <li><a href="https://twitter.com/alexguitz">Twitter</a></li>
+                   <li class="divider"></li>
+                   <li><a href="https://www.linkedin.com/in/alexguitz">Linkedin</a></li>
+                   <li class="divider"></li>
+                   <li><a href="https://github.com/natanguitz">Github</a></li>
+                 </ul>
+            </div>
+          </div>
+        </nav>
+    </div>
+
+    <div class="section no-pad-bot" id="index-banner">
+        <div class="container main-box">
+             <h1 class="text_h center header cd-headline letters type">
+                  <span>I work with</span>
+                  <span class="cd-words-wrapper waiting">
+                      <b class="is-visible">Episerver</b>
+                      <b>HTML 5</b>
+                      <b>CSS 3</b>
+                      <b>JavaScript</b>
+                      <b>C#</b>
+                      <b>SQL</b>
+                      <b>.NET</b>
+                      <b>SASS</b>
+                      <b>...</b>
+                  </span>
+            </h1>
+        </div>
+    </div>
+
+    <div id="intro" class="section scrollspy">
+        <div class="container">
+
+            <div class="row">
+              <div  class="col s12">
+                  <h2 class="center header text_h2">
+                      Hello I'm Alexander. <br/>
+                      A web developer based in Sweden.
+                  </h2>
+              </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="section scrollspy" id="work">
+        <div class="container">
+            <h2 class="header text_b"> My recent work</h2>
+                <div class="row">
+                      <div class="col s12 m4 l4">
+                            <div class="card">
+                                <div class="card-image waves-effect waves-block waves-light">
+                                    <img class="activator" src="img/imagen_1.png" alt="screenshoot from the site">
+                                </div>
+                                <div class="card-content">
+                                    <span class="card-title activator grey-text text-darken-4">Studio Creativos <i class="mdi-navigation-more-vert right"></i></span>
+                                    <p><a href="http://www.studiocreativos.com" target="_blank">Visit the Website</a></p>
+                                </div>
+                                <div class="card-reveal">
+                                    <span class="card-title grey-text text-darken-4">What i did? <i class="mdi-navigation-close right"></i></span>
+                                    <p>Homepage using a HTML, CSS (stylus), JavaScript. Content, and landing site.</p>
+                                </div>
+                            </div>
+                      </div>
+                      <div class="col s12 m4 l4">
+                            <div class="card">
+                                <div class="card-image waves-effect waves-block waves-light">
+                                    <img class="activator" src="img/imagen_2.png"  alt="screenshoot from the site">
+                                </div>
+                                <div class="card-content">
+                                    <span class="card-title activator grey-text text-darken-4">The New design <i class="mdi-navigation-more-vert right"></i></span>
+                                    <p><a href="http://www.alexguitz.com" target="_blank">Visit the Website</a></p>
+                                </div>
+                                <div class="card-reveal">
+                                    <span class="card-title grey-text text-darken-4">What i did? <i class="mdi-navigation-close right"></i></span>
+                                    <p>HTML5,  CSS3, Jquery and Image editing & materialize framework were use in this webpage and portfolio.</p>
+                                </div>
+                            </div>
+                      </div>
+                        <div class="col s12 m4 l4">
+                           <div class="card">
+                              <div class="card-image waves-effect waves-block waves-light">
+                                <img class="activator" src="img/sweaid.png" alt="screenshoot from the site">
+                              </div>
+                              <div class="card-content">
+                                <span class="card-title activator grey-text text-darken-4">Sweaid<i class="mdi-navigation-more-vert right"></i></span>
+                                <p><a href="http://www.sweaid.se" target="_blank">Visit the Website</a></p>
+                              </div>
+                              <div class="card-reveal">
+                                <span class="card-title grey-text text-darken-4">What i did? <i class="mdi-navigation-close right"></i></span>
+                                <p>Cuztomize and design website for a charity organization. Fluid responsive layout that flow and look great on any screen size. It can be viewed on large displays and scale down to tablet and mobile devices.  </p>
+                              </div>
+                          </div>
+                        </div>
+                </div>
+                <div class="row">
+                  <div class="col s12 m4 l4">
+                     <div class="card">
+                        <div class="card-image waves-effect waves-block waves-light">
+                          <img class="activator" src="img/demoapp.png" alt="screenshoot from the site">
+                        </div>
+                        <div class="card-content">
+                          <span class="card-title activator grey-text text-darken-4">Product Configurator<i class="mdi-navigation-more-vert right"></i></span>
+                          <p><a href="http://demoaspapp.azurewebsites.net/" target="_blank">Visit the Website</a></p>
+                        </div>
+                        <div class="card-reveal">
+                          <span class="card-title grey-text text-darken-4">What i did? <i class="mdi-navigation-close right"></i></span>
+                          <p>Asp.Net MVC demo app  is a product configurator using c# on the server side,
+                            Dependency injection and unit test, Continuos integration, bootstrap, javascript, html5 and  Saas.</p>
+                        </div>
+                    </div>
+                  </div>
+                </div>
+        </div>
+    </div>
+
+
+
+  <footer id="contact" class="page-footer scrollspy">
+    <div class="container">
+     <div class="row">
+            <div class="col l6 s12">
+              <div>
+                <figure class="rounded">
+                  <img src="img/display_image.jpg">
+                </figure>
+                <p class="footer-text">
+                    I build fully responsive interactive web sites with great user experiences.
+                </p>
+              </div>
+            </div>
+
+            <div class="col l3 s12">
+              <h5 class="footer-text-title"><strong>Contact</strong></h5>
+              <ul id="links-text">
+                <li><a class="footer-text" href="https://www.facebook.com/alexguitz" target="_blank">Facebook</a></li>
+                <li><a class="footer-text" href="https://twitter.com/alexguitz" target="_blank">Twitter</a></li>
+                <li><a class="footer-text" href="https://github.com/natanguitz" target="_blank">Github</a></li>
+                <li><a href="mailto:hello@alexguitz.com?subject=Saying%20Hello%20From%20:">hello@alexguitz.com</a></li>
+              </ul>
+            </div>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+       <  / >  With  <span class="heart">  &#9829;  </span> <a class="footer-text" href="#top">AlexGuitz 2017 &copy;</a>
+      </div>
+    </div>
+  </footer>
+
+  <!--  Scripts-->
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="js/materialize.js"></script>
+  <script src="js/init.js"></script>
+  <script src="js/custom.js"></script>
+</body>
+</html>
