changin site title

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta name="theme-color" content="#ff5722">
     <link rel="icon" sizes="192x192" href="http://www.alexguitz.com/img/logo20172.png">
     <link rel="icon" type="image/png" href="http://www.alexguitz.com/img/logo20172.png">
-    <title>AlexGuitz | Web Developer </title>
+    <title>Github serving | Github Test</title>
 
     <!-- Google analytics  -->
      <!-- <script>
